Fix z-index

--- a/styles/globals.sass
+++ b/styles/globals.sass
@@ -40,16 +40,17 @@ nav
   margin: 0
   padding: 25px
   transition: 750ms
-  z-index: 999
   display: flex
   align-items: flex-end
   justify-content: center
+  z-index: 2
   ul
     display: flex
     align-items: center
     justify-content: space-between
     width: 100%
     max-width: 500px
+    z-index: 2
     li
       list-style-type: none
       button
@@ -86,23 +87,27 @@ section
   justify-content: center
   flex-direction: column
   color: $white
-  z-index: 99
+  z-index: 1
   h2
     font-size: 2.5rem
     font-weight: 500
+    z-index: 5
   h3
     font-size: 1.5rem
     font-weight: 500
+    z-index: 5
   p
     font-size: 1.5rem
     font-weight: 300
     text-align: center
+    z-index: 5
   a
     font-weight: 300
     text-align: center
     color: $light-red
     text-decoration: none
     transition: 250ms
+    z-index: 5
     border-bottom: 1px solid $light-red
     &:hover
       color: $dark-red
@@ -118,6 +123,7 @@ section
   display: flex
   justify-content: center
   align-items: center
+  z-index: 1
   img
     min-width: 300px
     width: 300px
